@@ -155,7 +155,8 @@
 #ifndef racersmsg
 #define racersmsg		"{%u} {%g}"	/* Put in %R cookie */
 #endif
-#define audio_vbr		"{%w} {%Y} {%X} {%z} {%Q} {VBR} {%I} {%i} {%x} {%W} {%y} {%h} {%q} {%@}"	/* Put in %j cookie */
+#define audio_vbr		"{%w} {%Y} {%X} {%z} {%Q} {VBR} {%I} {%i} {%x} {%W} {%y} {%h} {%q} {%@} {%_} {%/} {%\\} {%(} {%)} {%|}"	/* Put in %j cookie */
+//#define audio_vbr		"{%w} {%Y} {%X} {%z} {%Q} {VBR} {%I} {%i} {%x} {%W} {%y} {%h} {%q} {%@} {%_} {%(} {%)} {%|}"	/* Put in %j cookie */
 #define audio_cbr		"{%w} {%Y} {%X} {%z} {%Q} {CBR} {%x} {%W} {%y} {%h} {%q}"			/* Put in %j cookie */
 
 /*
